--- a/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
+++ b/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
@@ -9,7 +9,32 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="item">1</div>
+    <div class="item" id="mft">2</div>
+    <div class="item">3</div>
+    <div class="item" id="sort">4</div>
 
+
+  </div>
+  <style>
+    .container {
+      display: grid;
+      grid-template-columns: repeat(4, 100px);
+      grid-gap: 20px;
+      grid-auto-columns: 200px;
+      grid-auto-rows: 200px;
+    }
+
+    @media (max-width: 480px) {
+      #sort {
+        display: none
+      }
+      #mft {
+        grid-column: 2 / 4;
+      }
+    }
+  </style>
 </body>
 
 </html>
