--- a/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -97,6 +97,27 @@
 
 
   <style>
+    .albums {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-gap: 10px;
+    }
+
+    .album {
+      background: rgba(255, 255, 255, 0.2);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      display: grid;
+      grid-template-columns: 150px 1fr;
+      color: antiquewhite;
+      align-content: center;
+      padding: 10px;
+      grid-column-gap: 10px;
+
+    }
+
+    .album__artwork {
+      width: 100%;
+    }
   </style>
 </body>
 
